# ffuf-gui

./: .gitignore  MANIFESt.in  PKGBUILD  README.md  pyproject.toml
ffuf_gui/: app.py  runner.py
ffuf_gui/static/: script.js  style.css
ffuf_gui/templates/: index.html
tests/: test_command_builder.py
